--- a/src/app/components/chat/chat.html
+++ b/src/app/components/chat/chat.html
@@ -1,3 +1,15 @@
-<span *ngFor="let message of messages" class="message">
-    {{message}}
-</span>
+<div class="flex flex-column message-wrapper">
+    <div class="messagebox">
+        <ng-container *ngFor="let message of messages">
+            <div class="mb-2">
+                <span class="message">
+                        {{message}}
+                </span>
+            </div>
+        </ng-container>
+    </div>
+    <div class="inputbar">
+        <textarea class="mb-05 left col-12" [(ngModel)]="newMessage" rows="2"></textarea>
+        <button (click)="sendMessage()" class="button right">Senden</button>
+    </div>
+</div>
