next step prepared

--- a/src/app/components/chat/chat.html
+++ b/src/app/components/chat/chat.html
@@ -2,8 +2,7 @@
     <div class="messagebox">
         <ng-container *ngFor="let message of messages">
             <div class="mb-2" [class.usermessagebox]="message.type === 2">
-                <span class="message" [class.usermessage]="message.type === 2">
-                    {{message.message}}
+                <span [innerHTML]="message.message" class="message" [class.usermessage]="message.type === 2">
                 </span>
             </div>
         </ng-container>
