--- a/src/app/components/chat/chat.scss
+++ b/src/app/components/chat/chat.scss
@@ -3,6 +3,8 @@
     border-radius: 3px;
     background-color: #007553;
     color: white;
+    display: inline-block;
+    max-width: 80%;
 }
 
 .message-wrapper {
